--- a/views/cancel.ejs
+++ b/views/cancel.ejs
@@ -8,7 +8,7 @@
 
 <section class="section">
 <div class="row">
-<div class="col is-one-quarter ">
+<div class="col is-one-4 ">
 <% include shop/cat %>
 
 </div>
