--- a/views/info.ejs
+++ b/views/info.ejs
@@ -9,7 +9,7 @@
 
 <section class="section">
 	<div class="row">
-		<div class="col is-one-quarter">
+		<div class="col is-one-4">
 		<% include shop/cat%>
 		</div><!--/col1/4-->
 	
