--- a/views/par/foot.ejs
+++ b/views/par/foot.ejs
@@ -1,26 +1,26 @@
 ﻿<footer class="footer">
 
 
-<div class="columns">
+<div class="row">
     
-	<div class="column is-one-5"></div><!--/col1-->
+	<div class="col is-one-5"></div><!--/col1-->
     
 	<% include pfoot/col2 %>
 	<% include pfoot/col3 %>
 	<% include pfoot/col4 %>
 
-	<div class="column is-one-5"></div><!--/col5-->
+	<div class="col is-one-5"></div><!--/col5-->
 
 
-</div><!--/columns -->
+</div><!--/row -->
 
    <br>
 
 
 <!--固定最下段-->
 
-	<div class="columns">
-	<div class="column" style="text-align:center">
+	<div class="row">
+	<div class="col" style="text-align:center">
 
 	<span style="font-size:medium">
 	サイト内の文章、画像などの著作物の複製、無断転用を禁じます。<br>
@@ -28,7 +28,7 @@
 	</span>
 
 
-	</div><!--/columns-->
+	</div><!--/row-->
 	</div><!--/col-->
 
 
