--- a/views/usr.ejs
+++ b/views/usr.ejs
@@ -13,11 +13,11 @@
 <section class="section">
 <div class="row">
 
-<div class="col is-one-quarter bkg-ali">
+<div class="col is-one-4 bkg-ali">
 <% include shop/cat %>
 </div><!-- /col1-->
 
-<div class="col is-three-quarters bkg-bei">
+<div class="col is-3-4 bkg-bei">
 <% include usr/sel%>
 </div><!-- /col2-->
 
