--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html>
 <% include par/head%>
+<% include par/nav%>
 <body>
 <!-- menu -->
 
-<% include par/nav%>
 <!-- menu -->
 
-<div class="container-fluid">
+<section class="section">
 <div class="row">
 
-<div class="col-sm-12">
-<div align="center">
-    <h4 class="badge badge-danger">ページがみつかりません</h4>
-<br>
-</div><!-- /center-->
+<div class="col">
+    <p class="has-t-cen">ページがみつかりません</p>
 </div><!-- /col12-->
 
 </div><!-- /row-->
-</div><!-- /container-fluid-->
+</section><!-- /container-fluid-->
     <% include par/foot %>
 
 </body>
