--- a/views/category.ejs
+++ b/views/category.ejs
@@ -10,7 +10,7 @@
 
 <section class="section">
     <div class="row">
-	    <div class="col is-one-quarter">
+	    <div class="col is-one-4">
 		<% include shop/cat %>
 		</div><!--/col-->
 		<div class="col">
