--- a/views/item.ejs
+++ b/views/item.ejs
@@ -8,7 +8,7 @@
 
 <div class="section">
 <div class="row">
-<div class="col is-one-quarter">
+<div class="col is-one-4">
 <% include shop/cat%>
 </div>
 
